syntax = "proto3";
package proto;
option go_package = " github.com/ragoob/gCache/proto";

service GCacheService {
  rpc Set(SetRequest) returns (SetResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
}

message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse {
  bool success = 1;
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}
